test/CheckError/Conditional/MismatchedTernaryValues.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

export int main(unused int argc, unused ubyte ** argv) {
	// CHECK: .loci:6:16: error: User cast failed from type 'double_t' to type 'notag(int8_t)'.
	unused_result(true ? 1 : 1.0);
	return 0;
}

// CHECK: 1 error generated.
